--- a/UnitTest_Perf/UnitTest_Perf.csproj
+++ b/UnitTest_Perf/UnitTest_Perf.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
   <ItemGroup>
