--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -9,9 +9,9 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 
     <!-- AOT and Trimming Configuration -->
-    <RuntimeIdentifiers>win-x64;win-x86</RuntimeIdentifiers>
-    <PublishAot>false</PublishAot>
-    
+    <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
+    <PublishAot>true</PublishAot>
+
     <!-- Required for WinForms AOT -->
     <!--<IlcDisableReflection>false</IlcDisableReflection>
     <IlcTrimMetadata>false</IlcTrimMetadata>
@@ -23,12 +23,12 @@
     <!--<PublishTrimmed>true</PublishTrimmed>
     <CustomResourceTypesSupport>true</CustomResourceTypesSupport>
     <TrimMode>partial</TrimMode>
-    <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>
+    <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>-->
     <_SuppressWinFormsTrimError>true</_SuppressWinFormsTrimError>
     <_SuppressWpfTrimError>true</_SuppressWpfTrimError>-->
-    
+
     <!-- Enable Native debugging -->
-    <StripSymbols>false</StripSymbols>
+    <!--<StripSymbols>false</StripSymbols>-->
 
     <!-- Required for WinForms -->
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
