--- a/HaCreator/HaCreator.csproj
+++ b/HaCreator/HaCreator.csproj
@@ -11,24 +11,8 @@
     <!-- AOT and Trimming Configuration -->
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
     <PublishAot>true</PublishAot>
-
-    <!-- Required for WinForms AOT -->
-    <!--<IlcDisableReflection>false</IlcDisableReflection>
-    <IlcTrimMetadata>false</IlcTrimMetadata>
-    <IlcFoldIdenticalMethodBodies>false</IlcFoldIdenticalMethodBodies>
-    <IlcGenerateStackTraceData>true</IlcGenerateStackTraceData>
-    <IlcOptimizationPreference>Speed</IlcOptimizationPreference>-->
-
-    <!-- Trimming Configuration -->
-    <!--<PublishTrimmed>true</PublishTrimmed>
-    <CustomResourceTypesSupport>true</CustomResourceTypesSupport>
-    <TrimMode>partial</TrimMode>
-    <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>-->
     <_SuppressWinFormsTrimError>true</_SuppressWinFormsTrimError>
-    <_SuppressWpfTrimError>true</_SuppressWpfTrimError>-->
-
-    <!-- Enable Native debugging -->
-    <!--<StripSymbols>false</StripSymbols>-->
+    <_SuppressWpfTrimError>true</_SuppressWpfTrimError>
 
     <!-- Required for WinForms -->
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
