--- a/HaRepacker/Harepacker-resurrected.csproj
+++ b/HaRepacker/Harepacker-resurrected.csproj
@@ -11,9 +11,9 @@
     
     <!-- AOT and Trimming Configuration -->
     <RuntimeIdentifiers>win-x64;win-x86;win-arm64</RuntimeIdentifiers>
-    <PublishAot>true</PublishAot>
-    <_SuppressWinFormsTrimError>true</_SuppressWinFormsTrimError>
-    <_SuppressWpfTrimError>true</_SuppressWpfTrimError>
+    <PublishAot>false</PublishAot>
+    <_SuppressWinFormsTrimError>false</_SuppressWinFormsTrimError>
+    <_SuppressWpfTrimError>false</_SuppressWpfTrimError>
 
     <!-- Required for WinForms -->
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
