--- a/UnitTest_Perf/UnitTest_Perf.csproj
+++ b/UnitTest_Perf/UnitTest_Perf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSTest.Sdk/3.6.0">
 
   <PropertyGroup>
-    <TargetFramework>net10.0-windows7.0</TargetFramework>
+    <TargetFramework>net10.0-windows</TargetFramework>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
