--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -49,7 +49,13 @@ jobs:
         dotnet restore MapleHaSuite.sln
 
     - name: Build Solution
-      run: msbuild MapleHaSuite.sln /p:Configuration=Release /p:Platform="x64" /p:RestorePackages=false
+      run: |
+        if [ "${{ matrix.language }}" == "csharp" ]; then
+          dotnet build MapleHaSuite.sln -c Release
+        else
+          msbuild MapleHaSuite.sln /p:Configuration=Release /p:Platform="x64" /p:RestorePackages=false
+        fi
+      shell: bash
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
