--- a/HaSharedLibrary/HaSharedLibrary.csproj
+++ b/HaSharedLibrary/HaSharedLibrary.csproj
@@ -26,6 +26,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\XnaFont_Chat.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\XnaFont_Debug.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -58,5 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="GUI\NpcRichTextBox.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Content\XnaFont_Chat.xnb" />
   </ItemGroup>
 </Project>
