[HaMCP] Optimize response sizes to reduce context window consumption
Add pagination, compact modes, and size limits to minimize JSON response sizes for MCP tools. Benchmarks show 6-12x size reduction for typical operations.

  Key optimizations:
  - get_animation_frames: Add metadataOnly=true (default) to skip Base64
    image data, add pagination with offset/limit (max 50 frames)
  - list_properties: Add compact mode and pagination (max 500 items)
  - get_children: Add compact mode and pagination (max 500 items)
  - search_by_name/value: Add compact mode (excludes name/type/value),
    reduce default maxResults from 100 to 50
  - get_tree_structure: Add maxChildrenPerNode limit, reduce default
    depth from 3 to 2, cap total nodes at 1000
  - export_to_json: Enforce 100KB inline limit, require outputPath for
    larger exports, add node counting

  Configuration:
  - Add ResponseLimits section to appsettings.json for customization

  Testing:
  - Add 14 new unit tests for pagination and compact modes
  - Add 8 integration tests (env: HAMCP_TEST_DATA_PATH)
  - Integration tests auto-discover mobs/maps from any data source

  Documentation:
  - Update MCP_SERVER_IMPLEMENTATION_PLAN.md to v1.1.0
  - Document all optimization parameters and response formats

--- a/HaMCP/Config/appsettings.json
+++ b/HaMCP/Config/appsettings.json
@@ -8,6 +8,14 @@
   "HaMCP": {
     "Transport": "stdio",
     "DefaultDataPath": null,
-    "MaxCacheSize": 512
+    "MaxCacheSize": 512,
+    "ResponseLimits": {
+      "MaxJsonResponseKB": 512,
+      "MaxBase64ImageKB": 256,
+      "DefaultAnimationPageSize": 5,
+      "DefaultSearchResults": 50,
+      "DefaultPropertyPageSize": 100,
+      "IncludeChildNamesDefault": false
+    }
   }
 }
